Added design files

--- a/src/ComicBookGallery/Views/ComicBooks/Detail.cshtml
+++ b/src/ComicBookGallery/Views/ComicBooks/Detail.cshtml
@@ -1,17 +1,35 @@
 ﻿@{
-    Layout = null;
+	Layout = null;
 }
 
 <!DOCTYPE html>
 
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title></title>
+	<meta name="viewport" content="width=device-width" />
+	<title></title>
 </head>
 <body>
-    <div>
-        <h1>Hello from our View!</h1>
-    </div>
+	<div>
+		<h1>@ViewBag.SeriesTitle</h1>
+		<h2>Issue #@ViewBag.IssueNumber</h2>
+
+		<h5>Description:</h5>
+		<div>@Html.Raw(ViewBag.Description)</div>
+
+		@if (ViewBag.Artists.Length > 0)
+		{
+			<h5>Artist:</h5>
+			<div>
+				<ul>
+					@foreach (var artist in ViewBag.Artists)
+					{
+						<li>@artist</li>
+					}
+				</ul>
+			</div>
+		}
+
+	</div>
 </body>
 </html>
